--- a/Public/index.html
+++ b/Public/index.html
@@ -17,6 +17,8 @@
         <a class="btn btn-ghost text-xl">Radio API</a>
     </div>
 
-    
+    <script>
+        const data = <% JSON.stringify(data) %>
+    </script>
 </body>
 </html>
