--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
       type="text/css"
     />
     <title>BALLDONTLIE API</title>
-    
+    <script src="dataSeason23.js"></script>
+    <script src="kmeans-worker.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body >
+    <script src="script.js"></script>
     <div class="navbar bg-base-100 flex justify-center">
         <a class="btn btn-ghost text-xl">BALLDONTLIE API</a>
     </div>
@@ -47,7 +49,7 @@
                 <!-- head -->
                 <thead>
                     <tr>
-                    <th>Nome</th>
+                    <th>Nome Selecionado</th>
                     <th>Time</th>
                     
                     </tr>
