Observações do Professor

--- a/index.html
+++ b/index.html
@@ -256,7 +256,10 @@
         }        
     });
 </script>
+<!-- Observações do professor -->
+<!-- Aplicar um tratamento pra seleções repetidas -->
 
+<!-- Busca de Dados da API -> SAB -> Workers -> SAB -> ... -->
 
 </body>
 </html>
