--- a/index.html
+++ b/index.html
@@ -1,281 +1,291 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="https://cdn.jsdelivr.net/npm/daisyui@2.6.0/dist/full.css" rel="stylesheet" type="text/css" />
-  <title>BALLDONTLIE API</title>
-  <script src="dataSeason23.js"></script>
-  <script src="kmeans-worker.js"></script>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script> if (!crossOriginIsolated) SharedArrayBuffer = ArrayBuffer </script>
-</head>
-<body>
-  <script src="script.js"></script>
-  <div class="navbar bg-base-100 flex justify-center">
-    <a class="btn btn-ghost text-xl">BALLDONTLIE API</a>
-  </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/daisyui@2.6.0/dist/full.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <title>BALLDONTLIE API</title>
+    <script src="dataSeason23.js"></script>
+    <script src="kmeans-worker.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      if (!crossOriginIsolated) SharedArrayBuffer = ArrayBuffer;
+    </script>
+  </head>
+  <body>
+    <script src="script.js"></script>
+    <div class="navbar bg-base-100 flex justify-center">
+      <a class="btn btn-ghost text-xl">BALLDONTLIE API</a>
+    </div>
 
-  <div class="flex flex-row justify-center gap-5">
-    <div class="overflow-x-auto flex flex-col justify-center">
-      <div>
+    <div class="flex flex-row justify-center gap-5">
+      <div class="overflow-x-auto flex flex-col justify-center">
+        <div>
+          <table class="table w-full max-w-xs overflow-x-auto">
+            <!-- head -->
+            <thead>
+              <tr>
+                <th>ID</th>
+                <th>Nome</th>
+                <th>Time</th>
+                <th>Selecionar</th>
+              </tr>
+            </thead>
+            <tbody id="players-list">
+              <!-- Dados dos jogadores serão inseridos aqui dinamicamente -->
+            </tbody>
+          </table>
+        </div>
+
+        <div class="join flex justify-center gap-2" id="pagination">
+          <button class="join-item btn btn-square" id="prevPage"><</button>
+          <button class="join-item btn btn-square" id="nextPage">></button>
+        </div>
+      </div>
+
+      <div
+        class="overflow-x-auto flex flex-col justify-center"
+        id="selectedDiv"
+      >
         <table class="table w-full max-w-xs overflow-x-auto">
           <!-- head -->
           <thead>
             <tr>
               <th>ID</th>
-              <th>Nome</th>
+              <th>Nome Selecionado</th>
               <th>Time</th>
-              <th>Selecionar</th>
             </tr>
           </thead>
-          <tbody id="players-list">
-            <!-- Dados dos jogadores serão inseridos aqui dinamicamente -->
-          </tbody>
+          <tbody id="selected-Players"></tbody>
         </table>
       </div>
-
-      <div class="join flex justify-center gap-2" id="pagination">
-        <button class="join-item btn btn-square" id="prevPage"><</button>
-        <button class="join-item btn btn-square" id="nextPage">></button>
-      </div>
     </div>
 
-    <div class="overflow-x-auto flex flex-col justify-center" id="selectedDiv">
-      <table class="table w-full max-w-xs overflow-x-auto">
-        <!-- head -->
-        <thead>
-          <tr>
-            <th>ID</th>
-            <th>Nome Selecionado</th>
-            <th>Time</th>
-          </tr>
-        </thead>
-        <tbody id="selected-Players"></tbody>
-      </table>
-    </div>
-  </div>
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        const apiUrl = "https://balldontlie.io/api/v1/players";
+        const playersList = document.getElementById("players-list");
+        const selectedPlayersList = document.getElementById("selected-Players");
+        const pagination = document.getElementById("pagination");
+        let currentPage = 1;
 
-  <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      const apiUrl = "https://balldontlie.io/api/v1/players";
-      const playersList = document.getElementById("players-list");
-      const selectedPlayersList = document.getElementById("selected-Players");
-      const pagination = document.getElementById("pagination");
-      let currentPage = 1;
+        function createPlayerElement(player) {
+          const row = document.createElement("tr");
 
-      function createPlayerElement(player) {
-        const row = document.createElement("tr");
+          const idCell = document.createElement("td");
+          idCell.textContent = `${player.id}`;
 
-        const idCell = document.createElement("td");
-        idCell.textContent = `${player.id}`;
+          const nameCell = document.createElement("td");
+          nameCell.textContent = `${player.first_name}  ${player.last_name}`;
 
-        const nameCell = document.createElement("td");
-        nameCell.textContent = `${player.first_name}  ${player.last_name}`;
+          const teamCell = document.createElement("td");
+          teamCell.textContent = player.team.name;
 
-        const teamCell = document.createElement("td");
-        teamCell.textContent = player.team.name;
+          const checkboxCell = document.createElement("td");
+          checkboxCell.classList.add("flex");
+          checkboxCell.classList.add("justify-center");
 
-        const checkboxCell = document.createElement("td");
-        checkboxCell.classList.add("flex");
-        checkboxCell.classList.add("justify-center");
+          const selectCell = document.createElement("input");
+          selectCell.type = "checkbox";
+          selectCell.classList.add("checkbox");
+          selectCell.classList.add("hover");
+          checkboxCell.appendChild(selectCell);
 
-        const selectCell = document.createElement("input");
-        selectCell.type = "checkbox";
-        selectCell.classList.add("checkbox");
-        selectCell.classList.add("hover");
-        checkboxCell.appendChild(selectCell);
+          row.appendChild(idCell);
+          row.appendChild(nameCell);
+          row.appendChild(teamCell);
+          row.appendChild(checkboxCell);
 
-        row.appendChild(idCell);
-        row.appendChild(nameCell);
-        row.appendChild(teamCell);
-        row.appendChild(checkboxCell);
-
-        playersList.appendChild(row);
-      }
-
-      async function getPlayerData(playerId) {
-        try {
-          const response = await fetch(
-            `https://www.balldontlie.io/api/v1/season_averages?season=2018&player_ids[]=${playerId}`
-          );
-          const playerAverage = await response.json();
-          return playerAverage.data[0];
-        } catch (error) {
-          console.error("Erro ao obter médias do Jogador:", error);
-          throw error;
+          playersList.appendChild(row);
         }
-      }
 
-      async function fetchPlayerByName(name) {
-        const specificUrl = `${apiUrl}?search=${name.replace(/ +/g, "_")}`;
-
-        try {
-          const response = await fetch(specificUrl);
-          const data = await response.json();
-          return data.data[0];
-        } catch (error) {
-          console.error("Erro ao obter dados do Jogador:", error);
-          throw error;
+        async function getPlayerData(playerId) {
+          try {
+            const response = await fetch(
+              `https://www.balldontlie.io/api/v1/season_averages?season=2018&player_ids[]=${playerId}`
+            );
+            const playerAverage = await response.json();
+            return playerAverage.data[0];
+          } catch (error) {
+            console.error("Erro ao obter médias do Jogador:", error);
+            throw error;
+          }
         }
-      }
 
-      function fetchPlayers(page) {
-        const url = `${apiUrl}?page=${page}&per_page=10`;
+        async function fetchPlayerByName(name) {
+          const specificUrl = `${apiUrl}?search=${name.replace(/ +/g, "_")}`;
 
-        fetch(url)
-          .then((response) => response.json())
-          .then((data) => {
-            playersList.innerHTML = ""; // Limpar a lista antes de adicionar novos jogadores
-            const players = data.data;
+          try {
+            const response = await fetch(specificUrl);
+            const data = await response.json();
+            return data.data[0];
+          } catch (error) {
+            console.error("Erro ao obter dados do Jogador:", error);
+            throw error;
+          }
+        }
 
-            players.forEach((player) => {
-              createPlayerElement(player);
+        function fetchPlayers(page) {
+          const url = `${apiUrl}?page=${page}&per_page=10`;
+
+          fetch(url)
+            .then((response) => response.json())
+            .then((data) => {
+              playersList.innerHTML = ""; // Limpar a lista antes de adicionar novos jogadores
+              const players = data.data;
+
+              players.forEach((player) => {
+                createPlayerElement(player);
+              });
+            })
+            .catch((error) => {
+              console.error("Erro ao obter dados da API:", error);
             });
-          })
-          .catch((error) => {
-            console.error("Erro ao obter dados da API:", error);
+        }
+
+        // Inicialmente, carregar os jogadores da primeira página
+        fetchPlayers(currentPage);
+
+        // Adicionar lógica para a página anterior e próxima página
+        const prevPageButton = document.getElementById("prevPage");
+        const nextPageButton = document.getElementById("nextPage");
+
+        prevPageButton.addEventListener("click", function () {
+          if (currentPage > 1) {
+            currentPage--;
+            fetchPlayers(currentPage);
+          }
+        });
+
+        nextPageButton.addEventListener("click", function () {
+          // Ajuste o limite de acordo com o número total de páginas, se disponível
+          const totalPages = 521;
+
+          if (currentPage < totalPages) {
+            currentPage++;
+            fetchPlayers(currentPage);
+          }
+        });
+
+        // Mover jogadores selecionados
+
+        const moveSelectedButton = document.createElement("button");
+        moveSelectedButton.textContent = "Mover Selecionados";
+        moveSelectedButton.classList.add("btn");
+        moveSelectedButton.addEventListener("click", function () {
+          moveSelectedPlayers();
+        });
+
+        document.getElementById("pagination").appendChild(moveSelectedButton);
+
+        function moveSelectedPlayers() {
+          const selectedPlayers = document.querySelectorAll(
+            "#players-list .checkbox:checked"
+          );
+
+          selectedPlayers.forEach((player) => {
+            moveSelectedPlayer(player.closest("tr"), true);
           });
-      }
 
-      // Inicialmente, carregar os jogadores da primeira página
-      fetchPlayers(currentPage);
-
-      // Adicionar lógica para a página anterior e próxima página
-      const prevPageButton = document.getElementById("prevPage");
-      const nextPageButton = document.getElementById("nextPage");
-
-      prevPageButton.addEventListener("click", function () {
-        if (currentPage > 1) {
-          currentPage--;
-          fetchPlayers(currentPage);
+          removeDuplicates();
         }
-      });
 
-      nextPageButton.addEventListener("click", function () {
-        // Ajuste o limite de acordo com o número total de páginas, se disponível
-        const totalPages = 521;
+        function moveSelectedPlayer(row, isSelected) {
+          if (isSelected) {
+            // Clona a linha e a move para a tabela de jogadores selecionados
+            const selectedRow = row.cloneNode(true);
+            selectedPlayersList.appendChild(selectedRow);
 
-        if (currentPage < totalPages) {
-          currentPage++;
-          fetchPlayers(currentPage);
-        }
-      });
-
-      // Mover jogadores selecionados
-
-      const moveSelectedButton = document.createElement("button");
-      moveSelectedButton.textContent = "Mover Selecionados";
-      moveSelectedButton.classList.add("btn");
-      moveSelectedButton.addEventListener("click", function () {
-        moveSelectedPlayers();
-      });
-
-      document.getElementById("pagination").appendChild(moveSelectedButton);
-
-      function moveSelectedPlayers() {
-        const selectedPlayers = document.querySelectorAll(
-          "#players-list .checkbox:checked"
-        );
-
-        selectedPlayers.forEach((player) => {
-          moveSelectedPlayer(player.closest("tr"), true);
-        });
-
-        removeDuplicates();
-      }
-
-      function moveSelectedPlayer(row, isSelected) {
-        if (isSelected) {
-          // Clona a linha e a move para a tabela de jogadores selecionados
-          const selectedRow = row.cloneNode(true);
-          selectedPlayersList.appendChild(selectedRow);
-
-          // Remove o checkbox da cópia na tabela de jogadores selecionados
-          selectedRow.querySelector(".checkbox").remove();
-        } else {
-          // Remove a linha da tabela de jogadores selecionados
-          row.remove();
-        }
-      }
-
-      function removeDuplicates() {
-        const rows = [...document.querySelectorAll("#selected-Players tr")];
-        const uniqueRowContents = new Set(); // Instancia um array de objetos unicos
-
-        rows.forEach((row) => {
-          const rowContent = Array.from(row.cells)
-            .map((cell) => cell.innerHTML)
-            .join("|");
-
-          if (uniqueRowContents.has(rowContent)) {
-            row.remove();
+            // Remove o checkbox da cópia na tabela de jogadores selecionados
+            selectedRow.querySelector(".checkbox").remove();
           } else {
-            uniqueRowContents.add(rowContent);
+            // Remove a linha da tabela de jogadores selecionados
+            row.remove();
           }
-        });
-
-        return uniqueRowContents;
-      }
-
-      // Adiciona um botão para buscar jogadores similares
-
-      const searchSimilarButton = document.createElement("button");
-      searchSimilarButton.textContent = "Buscar Similares";
-      searchSimilarButton.classList.add("btn");
-      searchSimilarButton.addEventListener("click", () => {
-        searchSimilarPlayers();
-      });
-
-      document.getElementById("selectedDiv").appendChild(searchSimilarButton);
-
-      function searchSimilarPlayers() {
-        const rows = [...document.querySelectorAll("#selected-Players tr")];
-        const similarPlayersData = [];
-
-        //Guarda IDs dos Jogadores selecionados
-        rows.forEach((row) => {
-          const playerId = row.querySelector("td:first-child").textContent;
-
-          similarPlayersData.push(playerId);
-        });
-
-        initializeSpecificCentroids(similarPlayersData);
-      }
-
-      async function initializeSpecificCentroids(similarPlayersData) {
-        const averageData = [];
-
-        const averagePromises = Array.from(similarPlayersData).map(
-          async (singleData) => {
-            try {
-              const average = await getPlayerData(singleData);
-
-              if (average) averageData.push(average);
-              else
-                console.log(
-                  `O jogador de ID:${singleData} não possui registro nessa Temporada`
-                );
-            } catch (error) {
-              console.error("Erro ao obter média por ID:", error);
-            }
-          }
-        );
-
-        await Promise.all(averagePromises);
-        let data = dataSet();
-        let k = averageData.length;
-        let maxIterations = 100;
-        if (averageData.length !== 0){
-          console.log("Os escolhidos:",averageData[0]);
-          kmeansParallel(data, k, maxIterations, averageData);
         }
-        else console.log("Tente outro Jogador");
-      }
-    });
-  </script>
-  <!-- Observações do professor -->
 
-  <!-- Busca de Dados da API -> SAB -> Workers -> SAB -> ... -->
-</body>
+        function removeDuplicates() {
+          const rows = [...document.querySelectorAll("#selected-Players tr")];
+          const uniqueRowContents = new Set(); // Instancia um array de objetos unicos
+
+          rows.forEach((row) => {
+            const rowContent = Array.from(row.cells)
+              .map((cell) => cell.innerHTML)
+              .join("|");
+
+            if (uniqueRowContents.has(rowContent)) {
+              row.remove();
+            } else {
+              uniqueRowContents.add(rowContent);
+            }
+          });
+
+          return uniqueRowContents;
+        }
+
+        // Adiciona um botão para buscar jogadores similares
+
+        const searchSimilarButton = document.createElement("button");
+        searchSimilarButton.textContent = "Buscar Similares";
+        searchSimilarButton.classList.add("btn");
+        searchSimilarButton.addEventListener("click", () => {
+          searchSimilarPlayers();
+        });
+
+        document.getElementById("selectedDiv").appendChild(searchSimilarButton);
+
+        function searchSimilarPlayers() {
+          const rows = [...document.querySelectorAll("#selected-Players tr")];
+          const similarPlayersData = [];
+
+          //Guarda IDs dos Jogadores selecionados
+          rows.forEach((row) => {
+            const playerId = row.querySelector("td:first-child").textContent;
+
+            similarPlayersData.push(playerId);
+          });
+
+          initializeSpecificCentroids(similarPlayersData);
+        }
+
+        async function initializeSpecificCentroids(similarPlayersData) {
+          const averageData = [];
+
+          const averagePromises = Array.from(similarPlayersData).map(
+            async (singleData) => {
+              try {
+                const average = await getPlayerData(singleData);
+
+                if (average) averageData.push(average);
+                else
+                  console.log(
+                    `O jogador de ID:${singleData} não possui registro nessa Temporada`
+                  );
+              } catch (error) {
+                console.error("Erro ao obter média por ID:", error);
+              }
+            }
+          );
+
+          await Promise.all(averagePromises);
+          
+          let data = dataSet();
+          let k = averageData.length;
+          let maxIterations = 100;
+          
+          if (averageData.length !== 0)
+            kmeansParallel(data, k, maxIterations, averageData);
+          else 
+            console.log("Tente outro Jogador");
+        }
+      });
+    </script>
+    <!-- Observações do professor -->
+
+    <!-- Busca de Dados da API -> SAB -> Workers -> SAB -> ... -->
+  </body>
 </html>
