--- a/index.html
+++ b/index.html
@@ -10,14 +10,12 @@
     />
     <title>BALLDONTLIE API</title>
     <script src="dataSeason23.js"></script>
-    <script src="kmeans-worker.js"></script>
+    <script crossorigin="anonymous" src="kmeans-worker.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-      if (!crossOriginIsolated) SharedArrayBuffer = ArrayBuffer;
-    </script>
+    
   </head>
   <body>
-    <script src="script.js"></script>
+    <script crossorigin="anonymous" src="script.js"></script>
     <div class="navbar bg-base-100 flex justify-center">
       <a class="btn btn-ghost text-xl">BALLDONTLIE API</a>
     </div>
